fix: fixed text align in en about

--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -118,6 +118,7 @@
   }
 
   .company-culture-section {
+    text-align: center;
     @include mobile {
       padding: 3rem 0;
     }
